--- a/src/main/resources/templates/main/userProfile.html
+++ b/src/main/resources/templates/main/userProfile.html
@@ -59,7 +59,7 @@
                     <section class="col-9 col-lg-8">
                         <!===  Review Title ====>
                         <span  class="user-review-title" th:text="${review.title}">Review Title</span>
-                        <img th:src="@{img/edit-button.png}" class="edit-review-button" alt="Edit Button">
+                        <img th:src="@{/img/edit-button.png}" class="edit-review-button" alt="Edit Button">
                        <br/>
                         <!===  Review Rating ====>
                         <span th:switch="${review.rating}" class="">
