--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -1,21 +1,17 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary py-3" th:fragment="Navbar">
+<nav class="navbar navbar-expand-lg bg-body-tertiary" th:fragment="Navbar">
     <div class="container">
-        <!== Nav Title ==>
-        <span class="navbar-brand"><a th:href="@{/}">Bookworm</a></span>
-        <!== Button ==>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- Navbar brand logo -->
+        <a th:href="@{/}" class="navbar-brand">Bookworm</a>
+        <!-- Collapse Button -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <!== Drop Down ==>
-        <div class="collapse navbar-collapse mt-3 mt-lg-0" id="navbarNavDropdown">
-            <ul class="navbar-nav ms-auto d-lg-flex align-items-lg-center">
-                <!== About Bookworm ==>
-                <li class=""><a th:href="@{/aboutBookworm}" href="" class="nav-link">About Bookworm</a></li>
-                <!== Log in button ==>
-                <li class="mx-lg-3"><a th:href="@{/login}" class="btn-log-in-nav nav-link">Log in</a></li>
-                <!== Get Started Button ==>
-                <li class="pb-3 pb-lg-0"><a th:href="@{/sign-up}" class="btn-get-started text-center">Get Started</a></li>
-            </ul>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ms-auto">
+                <a th:href="@{/aboutBookworm}" href="" class="nav-about-bookworm nav-link">About Bookworm</a>
+                <a th:href="@{/login}" class="nav-log-in nav-link">Log in</a>
+                <a th:href="@{/sign-up}" class="nav-get-started-btn nav-link">Get Started</a>
+            </div>
         </div>
     </div>
 </nav>
