--- a/src/main/resources/templates/base/index.html
+++ b/src/main/resources/templates/base/index.html
@@ -17,11 +17,11 @@
                     <h1>Embrace Your Inner Bookworm</h1>
                     <h2>explore, review, and see what others are saying about your favorite books.</h2>
                     <aside class="d-flex justify-content-center justify-content-lg-start">
-                        <a th:href="@{/Sign-up}" class="btn-get-started">Get Started</a>
+                        <a th:href="@{/sign-up}" class="btn-get-started">Get Started</a>
                         <a th:href="@{/login}" class="btn-log-in">Log in</a>
                     </aside>
                 </section>
-                <section class="col-lg-6 hero-img order-1 order-lg-2">
+                <section class="col-lg-6 hero-img order-1 order-lg-2 d-flex justify-content-center">
                     <img th:src="@{img/bookworm.png}" alt="Bookworm Logo" class="img-fluid"/>
                 </section>
             </div>
