--- a/src/main/resources/static/css/navbarStylesheet.css
+++ b/src/main/resources/static/css/navbarStylesheet.css
@@ -1,38 +1,3 @@
-/*!*======= Navbar =======*!*/
-/*!*======= Navbar =======*!*/
-/*.navbar-brand{*/
-/*    font-family: "Jost", sans-serif;*/
-/*}*/
-
-/*.btn-log-in-nav{*/
-/*    font-size: 16px;*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    !*margin: 10px 0 0 25px;*!*/
-/*    color: #47b2e4;*/
-/*    line-height: 1px;*/
-/*    text-decoration: none;*/
-/*    transition: 0.5s;*/
-/*}*/
-/*.btn-log-in-nav:hover{*/
-/*    color:#209dd8;*/
-/*    transform: scale(1.1);*/
-/*}*/
-
-/*!*===== Screen smaller then 991px =====*!*/
-/*@media (max-width: 991px){*/
-
-/*    !*===== nav =====*!*/
-/*    .btn-log-in-nav{*/
-/*        margin: 12px 0 24px 0;*/
-/*        transform: none;*/
-/*    }*/
-/*    .btn-log-in-nav:hover{*/
-/*        color: #17709a;*/
-/*        transform: none;*/
-/*    }*/
-/*}*/
-
 /*== Bookworm Brand Hover===*/
 .navbar .container .navbar-brand{
     transition: all 0.8s ease-in-out;
@@ -40,7 +5,7 @@
 }
 /*== Bookworm Brand Hover===*/
 .navbar .container .navbar-brand:hover{
-    transform: scale(1.2);
+    transform: scale(1.08);
     color: #13aa52;
 }
 
@@ -67,7 +32,7 @@
     box-sizing: border-box;
     color: #fff;
     cursor: pointer;
-    font-family: "Akzidenz Grotesk BQ Medium", -apple-system, BlinkMacSystemFont, sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 14px;
     outline: none;
     padding: 10px 25px;
@@ -88,15 +53,15 @@
 }
 /*== Login Button Hover ===*/
 .navbar-collapse .navbar-nav .nav-log-in{
-    background-color: #A2BADCFF;
-    border: 1px solid #A2BADCFF;
+    background-color: #5b8ed5;
+    border: 1px solid #5b8ed5;
     margin: 0 5px;
 
 }
 /*== Login Button Hover ===*/
 .navbar-collapse .navbar-nav .nav-log-in:hover{
-    background-color: rgba(100, 149, 237, 0.49);
-    border: 1px solid rgba(100, 149, 237, 0.49);
+    background-color: #37517e;
+    border: 1px solid #37517e;
 }
 
 @media (max-width: 991px){
