On registration page, The warning sign is only visible when an error occurs

--- a/src/main/resources/static/css/signinStylesheet.css
+++ b/src/main/resources/static/css/signinStylesheet.css
@@ -35,7 +35,7 @@
 #register-form{
     background-color: #fff;
     width: 90%;
-    margin: 0 auto;
+    margin: 24px auto;
     max-width: 580px;
     padding: 25px;
     border-radius: 24px;
