On Single Book Page, Fix the rating stars.

--- a/src/main/resources/templates/main/SingleBookPreview.html
+++ b/src/main/resources/templates/main/SingleBookPreview.html
@@ -42,7 +42,7 @@
                 <img th:case="'0'" th:src="@{/img/ratings/noStar.png}" th:alt="${singleBookInfo.getRating()}" class="single-book-rating">
                 <img th:case="'1'" th:src="@{/img/ratings/oneStar.png}" th:alt="${singleBookInfo.getRating()}" class="single-book-rating">
                 <img th:case="'2'" th:src="@{/img/ratings/twoStar.png}" th:alt="${singleBookInfo.getRating()}" class="single-book-rating">
-                <img th:case="'3'" th:src="@{/img/ratings/threeStar.png}" th:alt="${singleBookInfo.getRating()}" class="single-book-rating">
+                <img th:case="'3'" th:src="@{/img/ratings/threeStars.png}" th:alt="${singleBookInfo.getRating()}" class="single-book-rating">
                 <img th:case="'4'" th:src="@{/img/ratings/fourStars.png}" th:alt="${singleBookInfo.getRating()}" class="single-book-rating">
                 <img th:case="'5'" th:src="@{/img/ratings/fiveStars.png}" th:alt="${singleBookInfo.getRating()}" class="single-book-rating">
             </section>
