--- a/src/main/resources/static/css/singleBookStyleSheet.css
+++ b/src/main/resources/static/css/singleBookStyleSheet.css
@@ -183,8 +183,13 @@
 /*== Username and user IMG Container ==*/
 .review-container section:first-child{
     padding-top: 12px;
-    text-transform: capitalize;
     text-align: center;
+}
+.review-container section a{
+    text-decoration: none;
+    color:#1e1e1e;
+    text-transform: capitalize;
+
 }
 /*== User Review Profile Image ==*/
 .review-user-profile-img{
@@ -192,7 +197,25 @@
     width: 100px;
     object-fit: cover;
     border-radius: 80px;
+    transition: all 0.8s ease-in-out;
+    border: 3px solid #fff;
+    margin-bottom: 12px;
 }
+/*== User Review Profile Image ==*/
+.review-user-profile-img:hover{
+    transform: scale(1.08);
+    box-shadow: rgba(0, 0, 0, 0.16) 0 3px 6px, rgba(0, 0, 0, 0.23) 0 3px 6px;
+    border: 5px solid #fff;
+}
+
+.review-container section:first-child h5{
+    letter-spacing: 1px;
+    transition: all 0.8s ease-in-out;
+}
+.review-container section:first-child h5:hover{
+    transform: scale(1.08);
+}
+
 /*== Review Title ==*/
 .review-container section:nth-child(2) h5{
     font-weight: 700;
